--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@
 
 :root {
     --laranja-claro: #FF862A;
-    --alto-contraste-fundo:#000000;
-    --alto-contraste-texto:#ffffff;
-    --alto-contraste-link:#ffd700;
- }
+    --alto-contraste-fundo: #000000;
+    --alto-contraste-texto: #ffffff;
+    --alto-contraste-link: #ffd700;
+}
 
 body {
     font-size: 1rem;
@@ -146,6 +146,7 @@ h2 {
     right:20px;
     z-index: 1000;
 }
+
 .rotacao-botao{
     transform: rotate(-90deg);
     transform-origin: right center;
@@ -164,7 +165,7 @@ h2 {
     display: none;
 }
 
-.alto contrate{
+.alto-contraste{
     background-color: var(--alto-contraste-fundo);
     color: var(--alto-contraste-texto);
 }
@@ -194,7 +195,6 @@ h2 {
 .alto-contraste #galeria {
     background-color: var(--alto-contraste-fundo);
 }
-
 .alto-contraste .fundo-galeria {
     background: none;
 }
